tests/snapshots/snapshot_tests__array_min_swap_and_shift.snap
---
source: tests/snapshot_tests.rs
assertion_line: 753
expression: run_benchmark (& path)
---
BenchmarkResult {
    example_name: "examples/array/array_min_swap_and_shift.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 j+0) k+0)) j+0 (Read_Int_Int a+0 i+0)) j+0) (Read_Int_Int a+0 i+0))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 j+0) k+0)) i+0) (+ (Read_Int_Int a+0 j+0) k+0))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 j+0) k+0)) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z j+0)) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 j+0) k+0)) j+0 (Read_Int_Int a+0 i+0)) Z) (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 j+0) k+0)) Z)))",
        "(=> (not (= i+1 j+0)) (= (Read_Int_Int (Write_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 j+0) k+0)) j+0 (Read_Int_Int a+0 i+0)) i+1) (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 j+0) k+0)) i+1)))",
    ],
}
