tests/snapshots/snapshot_tests__array_split_03.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark (& path)
---
BenchmarkResult {
    example_name: "examples/array/array_split_03.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (- i+0 N)) i+0) (- i+0 N))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) i+0) i+0)",
        "(=> (not (= (+ Z N) i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (- i+0 N)) (+ Z N)) (Read_Int_Int a+0 (+ Z N))))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (- i+0 N)) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (- i+0 N)) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 i+0) Z) (Read_Int_Int a+0 Z)))",
    ],
}
