tests/snapshots/snapshot_tests__array_split_05.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_split_05.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (- 1)) i+0) (- 1))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 1) i+0) 1)",
        "(=> (not (= (+ N Z) i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 1) (+ N Z)) (Read_Int_Int a+0 (+ N Z))))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (- 1)) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 1) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (- 1)) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 1) Z) (Read_Int_Int a+0 Z)))",
    ],
}
