tests/snapshots/snapshot_tests__array_split_11.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_split_11.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 max+1) i+0) max+1)",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 max+1) 0) (Read_Int_Int b+0 0)))",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 min+1) 0) (Read_Int_Int b+0 0)))",
    ],
}
