tests/snapshots/snapshot_tests__array_split_20.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_split_20.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 0 0) 0) 0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 (- i+0 N)) (Read_Int_Int b+0 i+0) (Read_Int_Int c+0 i+0))) i+0) (+ (Read_Int_Int a+0 (- i+0 N)) (Read_Int_Int b+0 i+0) (Read_Int_Int c+0 i+0)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (Read_Int_Int a+0 (- i+0 1))) i+0) (Read_Int_Int a+0 (- i+0 1)))",
        "(=> (not (= (+ i+0 1) i+2)) (= (Read_Int_Int (Write_Int_Int a+2 i+2 (Read_Int_Int a+2 (- i+2 1))) (+ i+0 1)) (Read_Int_Int a+2 (+ i+0 1))))",
        "(=> (not (= (+ i+0 1) i+4)) (= (Read_Int_Int (Write_Int_Int a+4 i+4 (+ (Read_Int_Int a+4 (- i+4 N)) (Read_Int_Int b+4 i+4) (Read_Int_Int c+4 i+4))) (+ i+0 1)) (Read_Int_Int a+4 (+ i+0 1))))",
        "(=> (not (= (+ i+0 1) i+5)) (= (Read_Int_Int (Write_Int_Int a+5 i+5 (+ (Read_Int_Int a+5 (- i+5 N)) (Read_Int_Int b+5 i+5) (Read_Int_Int c+5 i+5))) (+ i+0 1)) (Read_Int_Int a+5 (+ i+0 1))))",
        "(=> (not (= (- i+0 1) i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 (- i+0 N)) (Read_Int_Int b+0 i+0) (Read_Int_Int c+0 i+0))) (- i+0 1)) (Read_Int_Int a+0 (- i+0 1))))",
        "(=> (not (= (- i+0 1) i+1)) (= (Read_Int_Int (Write_Int_Int a+1 i+1 (+ (Read_Int_Int a+1 (- i+1 N)) (Read_Int_Int b+1 i+1) (Read_Int_Int c+1 i+1))) (- i+0 1)) (Read_Int_Int a+1 (- i+0 1))))",
        "(=> (not (= (- i+0 N) i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 (- i+0 N)) (Read_Int_Int b+0 i+0) (Read_Int_Int c+0 i+0))) (- i+0 N)) (Read_Int_Int a+0 (- i+0 N))))",
        "(=> (not (= (- i+0 N) i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (Read_Int_Int a+0 (- i+0 1))) (- i+0 N)) (Read_Int_Int a+0 (- i+0 N))))",
        "(=> (not (= (- i+0 N) i+1)) (= (Read_Int_Int (Write_Int_Int a+1 i+1 (+ (Read_Int_Int a+1 (- i+1 N)) (Read_Int_Int b+1 i+1) (Read_Int_Int c+1 i+1))) (- i+0 N)) (Read_Int_Int a+1 (- i+0 N))))",
        "(=> (not (= (- i+0 N) i+1)) (= (Read_Int_Int (Write_Int_Int a+1 i+1 (Read_Int_Int a+1 (- i+1 1))) (- i+0 N)) (Read_Int_Int a+1 (- i+0 N))))",
        "(=> (not (= (- i+0 N) i+2)) (= (Read_Int_Int (Write_Int_Int a+2 i+2 (Read_Int_Int a+2 (- i+2 1))) (- i+0 N)) (Read_Int_Int a+2 (- i+0 N))))",
        "(=> (not (= (- i+1 N) i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (Read_Int_Int a+0 (- i+0 1))) (- i+1 N)) (Read_Int_Int a+0 (- i+1 N))))",
        "(=> (not (= (- i+2 N) i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (Read_Int_Int a+0 (- i+0 1))) (- i+2 N)) (Read_Int_Int a+0 (- i+2 N))))",
        "(=> (not (= (- i+3 N) i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (Read_Int_Int a+0 (- i+0 1))) (- i+3 N)) (Read_Int_Int a+0 (- i+3 N))))",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (Read_Int_Int a+0 (- i+0 1))) 0) (Read_Int_Int a+0 0)))",
        "(=> (not (= 1 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 (- i+0 N)) (Read_Int_Int b+0 i+0) (Read_Int_Int c+0 i+0))) 1) (Read_Int_Int a+0 1)))",
        "(=> (not (= 1 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (Read_Int_Int a+0 (- i+0 1))) 1) (Read_Int_Int a+0 1)))",
        "(=> (not (= 2 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 (- i+0 N)) (Read_Int_Int b+0 i+0) (Read_Int_Int c+0 i+0))) 2) (Read_Int_Int a+0 2)))",
        "(=> (not (= 2 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (Read_Int_Int a+0 (- i+0 1))) 2) (Read_Int_Int a+0 2)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 (- i+0 N)) (Read_Int_Int b+0 i+0) (Read_Int_Int c+0 i+0))) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (Read_Int_Int a+0 (- i+0 1))) N) (Read_Int_Int a+0 N)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (Read_Int_Int a+0 (- i+0 N)) (Read_Int_Int b+0 i+0) (Read_Int_Int c+0 i+0))) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (Read_Int_Int a+0 (- i+0 1))) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= i+0 i+2)) (= (Read_Int_Int (Write_Int_Int a+2 i+2 (+ (Read_Int_Int a+2 (- i+2 N)) (Read_Int_Int b+2 i+2) (Read_Int_Int c+2 i+2))) i+0) (Read_Int_Int a+2 i+0)))",
        "(=> (not (= i+0 i+4)) (= (Read_Int_Int (Write_Int_Int a+4 i+4 (+ (Read_Int_Int a+4 (- i+4 N)) (Read_Int_Int b+4 i+4) (Read_Int_Int c+4 i+4))) i+0) (Read_Int_Int a+4 i+0)))",
    ],
}
